@@ -17,6 +17,8 @@ import java.lang.reflect.Array;
 import java.lang.reflect.Method;
 import java.net.MalformedURLException;
 import java.net.URL;
+import java.nio.file.Files;
+import java.nio.file.Paths;
 import java.security.CodeSource;
 import java.security.ProtectionDomain;
 import java.security.cert.Certificate;
@@ -136,17 +138,20 @@ public class MoquiStart {
             initSystemProperties(moquiStartLoader, false, argMap);
             Process esProcess = argMap.containsKey("no-run-es") ? null : checkStartElasticSearch();
 
+            boolean successfullLoad = true;
             try {
                 System.out.println("Loading data with args " + argMap);
                 Class<?> c = moquiStartLoader.loadClass("org.moqui.Moqui");
                 Method m = c.getMethod("loadData", Map.class);
                 m.invoke(null, argMap);
-            } catch (Exception e) {
+            } catch (Throwable e) {
+                successfullLoad = false;
                 System.out.println("Error loading or running Moqui.loadData with args [" + argMap + "]: " + e.toString());
                 e.printStackTrace();
+            } finally {
+                checkStopElasticSearch(esProcess);
+                System.exit(successfullLoad ? 0 : 1);
             }
-            checkStopElasticSearch(esProcess);
-            System.exit(0);
         }
 
         // ===== Done trying specific commands, so load the embedded server
@@ -463,10 +468,27 @@ public class MoquiStart {
             System.out.println("ElasticSearch install found in runtime/elasticsearch, pid file found so not starting");
             return null;
         }
-        String[] envArr = { "JAVA_HOME=" + System.getProperty("java.home") };
-        System.out.println("Starting ElasticSearch install found in runtime/elasticsearch, pid file not found (" + envArr[0] + ")");
+        String javaHome = System.getProperty("java.home");
+        System.out.println("Starting ElasticSearch install found in runtime/elasticsearch, pid file not found (" + javaHome + ")");
+        boolean isWindows = System.getProperty("os.name").toLowerCase().startsWith("windows");
         try {
-            Process esProcess = Runtime.getRuntime().exec("./bin/elasticsearch", envArr, new File(esDir));
+            String[] command;
+            if (isWindows) {
+                command = new String[] {"cmd.exe", "/c", "bin\\elasticsearch.bat"};
+            } else {
+                command = new String[]{"./bin/elasticsearch"};
+                try {
+                    boolean elasticsearchOwner = Files.getOwner(Paths.get(runtimePath, "elasticsearch")).getName().equals("elasticsearch");
+                    boolean suAble = Runtime.getRuntime().exec(new String[]{"/bin/su", "-c", "/bin/true", "elasticsearch"}).waitFor() == 0;
+                    if (elasticsearchOwner && suAble) command = new String[]{"su", "-c", "./bin/elasticsearch", "elasticsearch"};
+                } catch (IOException e) {}
+            }
+            ProcessBuilder pb = new ProcessBuilder(command);
+            pb.redirectErrorStream(true);
+            pb.directory(new File(esDir));
+            pb.environment().put("JAVA_HOME", javaHome);
+            pb.inheritIO();
+            Process esProcess = pb.start();
             System.setProperty("moqui.elasticsearch.started", "true");
             return esProcess;
         } catch (Exception e) {
